// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItems should render correctly 1`] = `
<Fragment>
  <Styled(View)
    maxWidth=""
  >
    <Styled(BodyCopy)
      accessibilityText=""
      color="text.primary"
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs16"
      fontWeight="regular"
      margin={null}
      numberOfLines={1}
      text="abcd"
      textAlign="left"
      textDecoration={null}
    />
  </Styled(View)>
  <Styled(TouchableOpacity)
    onPress={[Function]}
  />
</Fragment>
`;

exports[`MenuItems should render correctly with badges and submenu 1`] = `
<Fragment>
  <Styled(View)
    maxWidth=""
  >
    <Styled(BodyCopy)
      accessibilityText=""
      color="text.primary"
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs16"
      fontWeight="regular"
      margin={null}
      numberOfLines={1}
      text="abcd"
      textAlign="left"
      textDecoration={null}
    />
  </Styled(View)>
  <Styled(TouchableOpacity)
    onPress={[Function]}
  >
    <Styled(View)
      marginRight=""
    >
      <Styled(BodyCopy)
        accessibilityText=""
        color="white"
        dataLocator=""
        fontFamily="primary"
        fontSize="fs10"
        fontWeight="black"
        margin={null}
        numberOfLines={null}
        text="promo"
        textDecoration={null}
      />
    </Styled(View)>
    <Styled(Image)
      alt="alt"
      source={
        Object {
          "testUri": "../../../../core/src/assets/smallright.png",
        }
      }
    />
  </Styled(TouchableOpacity)>
</Fragment>
`;

exports[`MenuItems should trigger the press event with l3 1`] = `
<Fragment>
  <Styled(View)
    maxWidth=""
  >
    <Styled(BodyCopy)
      accessibilityText=""
      color="text.primary"
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs16"
      fontWeight="regular"
      margin={null}
      numberOfLines={1}
      text="abcd"
      textAlign="left"
      textDecoration={null}
    />
  </Styled(View)>
  <Styled(TouchableOpacity)
    onPress={[Function]}
  >
    <Styled(View)
      marginRight=""
    >
      <Styled(BodyCopy)
        accessibilityText=""
        color="white"
        dataLocator=""
        fontFamily="primary"
        fontSize="fs10"
        fontWeight="black"
        margin={null}
        numberOfLines={null}
        text="promo"
        textDecoration={null}
      />
    </Styled(View)>
    <Styled(Image)
      alt="alt"
      source={
        Object {
          "testUri": "../../../../core/src/assets/smallright.png",
        }
      }
    />
  </Styled(TouchableOpacity)>
</Fragment>
`;

exports[`MenuItems should trigger the press event without l3 1`] = `
<Fragment>
  <Styled(View)
    maxWidth=""
  >
    <Styled(BodyCopy)
      accessibilityText=""
      color="text.primary"
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs16"
      fontWeight="regular"
      margin={null}
      numberOfLines={1}
      text="abcd"
      textAlign="left"
      textDecoration={null}
    />
  </Styled(View)>
  <Styled(TouchableOpacity)
    onPress={[Function]}
  >
    <Styled(View)
      marginRight=""
    >
      <Styled(BodyCopy)
        accessibilityText=""
        color="white"
        dataLocator=""
        fontFamily="primary"
        fontSize="fs10"
        fontWeight="black"
        margin={null}
        numberOfLines={null}
        text="promo"
        textDecoration={null}
      />
    </Styled(View)>
  </Styled(TouchableOpacity)>
</Fragment>
`;
